--- a/helm-apps/argocd/templates/appset.yaml
+++ b/helm-apps/argocd/templates/appset.yaml
@@ -9,7 +9,7 @@ spec:
     preserveResourcesOnDeletion: true
   generators:
   - git:
-      repoURL: {{ .Values.repoURL }}
+      repoURL: {{ .Values.repoUrl }}
       revision: HEAD
       files:
       - path: helm-apps/**/manual.yaml
@@ -23,7 +23,7 @@ spec:
           valueFiles:
           - values.yaml
           - "secrets+gpg-import:///helm-secrets-private-keys/key.asc?secrets.yaml"
-        repoURL: {{ .Values.repoURL }}
+        repoURL: {{ .Values.repoUrl }}
         targetRevision: HEAD
         path: '{{include "cc" $ }}path}}../'
       destination:
