fix(oncall): dependency from local chart

--- a/helm-apps/grafana/Chart.yaml
+++ b/helm-apps/grafana/Chart.yaml
@@ -9,4 +9,4 @@ dependencies:
   version: "6.30.*"
 - name: oncall
   version: "*.*.*"
-  repository: "https://grafana.github.io/helm-charts"
+  # repository: "https://grafana.github.io/helm-charts"
