fix(monitoring): try friendship for openshift and already monitoring

--- a/helm-apps/forome-prometheus/values.yaml
+++ b/helm-apps/forome-prometheus/values.yaml
@@ -1,4 +1,8 @@
 kube-prometheus-stack:
+  prometheusOperator:
+    enabled: true
+    denyNamespaces:
+      - openshift-monitoring
   fullnameOverride: "prometheus-kube-prometheus"
   prometheus-node-exporter:
     fullnameOverride: "prometheus-prometheus-node-exporter"
