--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -134,7 +134,7 @@ prepare:
     # Create or update the changelog file in the local project repository
   - path: '@semantic-release/git'
     # Push a release commit and tag, including configurable files
-    message: 'RELEASE: ${nextRelease.version}'
+    message: 'chore(RELEASE): ${nextRelease.version}'
     assets: ['CHANGELOG.md']
 
 # Responsible for publishing the release.
