--- a/helm-apps/loki/Chart.yaml
+++ b/helm-apps/loki/Chart.yaml
@@ -10,3 +10,4 @@ dependencies:
   - name: promtail
     repository: https://grafana.github.io/helm-charts
     version: 6.2.2
+    condition: promtail.enabled
