--- a/helm-apps/loki/templates/role.yaml
+++ b/helm-apps/loki/templates/role.yaml
@@ -1,13 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: loki-promtail-priveleged-wa
+  name: loki-anyuid
   namespace: loki
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:openshift:scc:privileged
+  name: system:openshift:scc:anyuid
 subjects:
 - kind: ServiceAccount
-  name: loki-promtail
+  name: loki
   namespace: loki
