fix(argocd): disable ingress

--- a/helm-apps/argocd/values.yaml
+++ b/helm-apps/argocd/values.yaml
@@ -128,7 +128,7 @@ argo-cd:
   ## Server
   server:
     ingress:
-      enabled: true
+      enabled: false
       annotations:
         cert-manager.io/cluster-issuer: clusterissuer-prom
       # ingressClassName: ""
