fix(argocd): fix anyid issues

--- a/helm-apps/argocd/templates/gpg-private-keys.yaml
+++ b/helm-apps/argocd/templates/gpg-private-keys.yaml
@@ -5,6 +5,6 @@ metadata:
 type: Opaque
 stringData:
   key.asc: |
-{{ .Values.gpgkey | nindent 4}}
+{{- .Values.gpgkey | nindent 4 }}
   githubtoken: |
-{{ .Values.githubtoken | nindent 4}}
+{{- .Values.githubtoken | nindent 4}}
