--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,5 +1,5 @@
 branches: ['main',{ "name": "dev", "prerelease": true }]
-ci: true
+ci: false
 debug: false
 dryRun: false
 # repositoryUrl: https://github.com/urltorepo
