feat(teleport): move to oidc default auth

--- a/helm-apps/teleport-cluster/templates/config.yaml
+++ b/helm-apps/teleport-cluster/templates/config.yaml
@@ -18,7 +18,9 @@ data:
       enabled: true
       cluster_name: {{ .Values.clusterName }}
       authentication:
-        type: local
+        type: oidc
+        second_factor: off
+        local_auth: true
         second_factor: off
       proxy_listener_mode: multiplex
       tokens:
