fix(argocd): fix redis name

--- a/helm-apps/argocd/values.yaml
+++ b/helm-apps/argocd/values.yaml
@@ -108,7 +108,7 @@ argo-cd:
     serviceAccount:
       create: true
       name: argocd-redis
-    name: ""
+    name: "redis"
     enabled: true
     image:
       tag: 7.0.0-bullseye
