feat(teleport): add wa for using cert-manager ingress http01 challenges and redirect to https

--- a/helm-apps/teleport-cluster/templates/deployment.yaml
+++ b/helm-apps/teleport-cluster/templates/deployment.yaml
@@ -241,6 +241,14 @@ spec:
         - mountPath: /var/lib/teleport
           name: "data"
 {{ end }}
+      - name: nginx
+        image: nginx
+        ports:
+        - containerPort: 80
+        volumeMounts:
+        - mountPath: /etc/nginx
+          readOnly: true
+          name: nginx-conf
       volumes:
 {{- if .Values.enterprise }}
       - name: license
