--- a/helm-apps/teleport-cluster/templates/service.yaml
+++ b/helm-apps/teleport-cluster/templates/service.yaml
@@ -27,6 +27,10 @@ spec:
     port: 443
     targetPort: 3080
     protocol: TCP
+  - name: http
+    port: 80
+    targetPort: 80
+    protocol: TCP
   {{- if not .Values.proxyListenerMode }}
   - name: sshproxy
     port: 3023
