fix(teleport): add host header for proxy_pass

--- a/helm-apps/teleport-cluster/templates/hacks/nginx-conf.yaml
+++ b/helm-apps/teleport-cluster/templates/hacks/nginx-conf.yaml
@@ -31,6 +31,7 @@ data:
             return 307 https:/$host$request_uri;
           }
           location /.well-known/ {
+            proxy_set_header Host $host;
             proxy_pass http://router-default.openshift-ingress.svc.cluster.local:80;
           }
       }
