feat(teleport): bump to 10.2.1

--- a/helm-apps/teleport-cluster/templates/config.yaml
+++ b/helm-apps/teleport-cluster/templates/config.yaml
@@ -18,7 +18,7 @@ data:
       enabled: true
       cluster_name: {{ .Values.clusterName }}
       authentication:
-        type: oidc
+        type: github
         second_factor: off
         local_auth: true
       proxy_listener_mode: multiplex
