fix(monitoring): rbac

--- a/helm-apps/forome-prometheus/templates/role.yaml
+++ b/helm-apps/forome-prometheus/templates/role.yaml
@@ -11,3 +11,17 @@ subjects:
 - kind: ServiceAccount
   name: prometheus-prometheus-node-exporter
   namespace: forome-prometheus
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: prometheus-prometheus-admisson-anyid
+  namespace: forome-prometheus
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:openshift:scc:anyuid
+subjects:
+- kind: ServiceAccount
+  name: prometheus-kube-prometheus-admission
+  namespace: forome-prometheus
