--- a/helm-apps/teleport-cluster/configs/apps/loki.yaml
+++ b/helm-apps/teleport-cluster/configs/apps/loki.yaml
@@ -1,11 +1,11 @@
 kind: app
 version: v3
 metadata:
-  name: argocd
-  description: "Forome argocd"
+  name: loki
+  description: "Forome loki"
   labels:
     hostname: openshift
     admins: access
 spec:
-  uri: "http://argocd-server.argocd.svc.cluster.local"
+  uri: "http://loki.loki.svc.cluster.local:3100"
   insecure_skip_verify: true
