--- a/helm-apps/teleport-cluster/configs/roles/developers.yaml
+++ b/helm-apps/teleport-cluster/configs/roles/developers.yaml
@@ -1,15 +1,16 @@
 kind: role
 metadata:
-  name: qa
+  name: developers
 spec:
   allow:
     app_labels:
-      qa: access
+      developers: access
     logins:
     - '{{internal.logins}}'
-    - qa
+    - developers
+    - root
     node_labels:
-      qa: access
+      developers: access
     rules:
     - resources:
       - event
