--- a/helm-apps/teleport-cluster/configs/apps/scicenter.yaml
+++ b/helm-apps/teleport-cluster/configs/apps/scicenter.yaml
@@ -1,15 +1,15 @@
 kind: app
 version: v3
 metadata:
-  name: anfisa-dev
-  description: "Forome anfisa dev"
+  name: anfisa-scicenter
+  description: "Forome anfisa scicenter"
   labels:
     hostname: dev-scicenter
     qa: access
     front: access
     developers: access
 spec:
-  uri: "http://localhost:3000"
+  uri: "http://localhost:3005"
   # public_addr: "anfisa.forome.dev"
   rewrite:
     redirect:
