feat(nsaph): add nsaph to teleport

--- a/helm-apps/teleport-cluster/templates/cert.yaml
+++ b/helm-apps/teleport-cluster/templates/cert.yaml
@@ -20,6 +20,7 @@ spec:
   - "argocd.teleport.forome.dev"
   - "loki.teleport.forome.dev"
   - "prometheus.teleport.forome.dev"
+  - "nsaph.teleport.forome.dev"
   issuerRef:
     name: clusterissuer-prom
     kind: ClusterIssuer
